--- a/index.html
+++ b/index.html
@@ -462,6 +462,12 @@ Tom Monks <a href="https://orcid.org/0000-0003-2631-4481" aria-label="View ORCID
 <iframe class="stretch" data-src="exercises.html">
 </iframe>
 <p>–&gt;</p>
+</section>
+<section id="Testing" class="slide level2" data-fullscreen="true">
+<h2></h2>
+<iframe class="stretch" data-src="testing_exercises.html">
+</iframe>
+<p>–&gt;</p>
 <!-- ## A simple python function
 
 
