chore(cleanup): removed redundant quarto files

--- a/index.html
+++ b/index.html
@@ -459,38 +459,18 @@ Tom Monks <a href="https://orcid.org/0000-0003-2631-4481" aria-label="View ORCID
 </section>
 <section id="Exercises" class="slide level2" data-fullscreen="true">
 <h2></h2>
-<iframe class="stretch" data-src="exercises.html">
+<iframe class="stretch" data-src="exercises/exercises.html">
 </iframe>
 <p>–&gt;</p>
 </section>
 <section id="Testing" class="slide level2" data-fullscreen="true">
 <h2></h2>
-<iframe class="stretch" data-src="testing_exercises.html">
+<iframe class="stretch" data-src="exercises/testing_exercises.html">
 </iframe>
 <p>–&gt;</p>
-<!-- ## A simple python function
-
-
-Baseline:
-
-```text
-Given five positive integers, find the minimum and maximum values that 
-can be calculated by summing exactly four of the five integers. 
-Print the respective minimum and maximum values.
-```
-
-Task: Do you need to issue any additional prompts to fine tune the output?  For example splitting the function into two separate functions representing the minimum and maximum values.
-Task: Modify this prompt using 1-shot prompt engineering i.e. include the example output.  Try this in a new chat window and compare outputs.
-
-Given five positive integers in a list, find the minimum and maximum values that can be calculated by summing exactly four of the five integers. Print the respective minimum and maximum values. Code the solution in Python as a python function that accepts a Python list as a parameter.
-
-Example 
-
-input  = [9, 3, 5, 7, 1]
-Output = 16, 24 -->
 <div class="quarto-auto-generated-content">
 <div class="footer footer-default">
-<p><a href="https://github.com/pythonhealthdatascience/gw4_prize_presentation" class="uri">https://github.com/pythonhealthdatascience/gw4_prize_presentation</a></p>
+<p><a href="https://github.com/TomMonks/coding_using_llm" class="uri">https://github.com/TomMonks/coding_using_llm</a></p>
 </div>
 </div>
 </section></section>
